*'''Project''': Jargon-core API
*'''Date''': 
*'''Release Version''': 3.3.2-SNAPSHOT
*'''git tag''': 3.3.2-SNAPSHOT

==News==

Bug Fix release of Jargon, following up the 3.3.1 general release


=======
Please go to [[https://code.renci.org/gf/project/jargon/]] for the latest news and info.

Jargon-core consists of the following libraries

* jargon-core - base libraries, implementation of the iRODS protocol
* jargon-data-utils - additional functionality for dealing with iRODS data, such as building trees, storing information in iRODS on behalf of applications, and doing diffs between local and iRODS
* jargon-security - code for use with Spring security
* jargon-user-tagging - code for using free tagging and other metadata metaphors on top of iRODS
* jargon-transfer - transfer manager for managing and synchronizing data with iRODS
* jargon-ticket - support for ticket processing
* jargon-httpstream - stream http content into iRODS via Jargon


==Requirements==

*Jargon depends on Java 1.6+
*Jargon is built using Apache Maven2, see POM for dependencies
*Jargon supports iRODS 2.5 through iRODS 3.3

==Libraries==

Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]

==Bug Fixes==


[#1635] ttl parameter in PAM missing
**Fix PAM login errors on iRODS 3.3 due to addition of timeToLive parameter

==Features==


*[#1603] EIRODS 3.0 compatability 
**Started preliminary work running tests and tweaking code for eIRODS3.0.  Work in progress.