@@ -49,6 +49,7 @@ public class SettableJargonProperties implements JargonProperties {
 	private boolean usingSpecificQueryForCollectionListingsWithPermissions = true;
 	private boolean usingSpecQueryForDataObjPermissionsForUserInGroup = false;
 	private int pamTimeToLive = 0;
+	private boolean forcePamFlush = false;
 
 	/**
 	 * Construct a default properties set based on the provided initial set of
@@ -752,6 +753,18 @@ public class SettableJargonProperties implements JargonProperties {
 	 */
 	public synchronized void setPAMTimeToLive(final int pamTimeToLive) {
 		this.pamTimeToLive = pamTimeToLive;
+	}
+
+	/* (non-Javadoc)
+	 * @see org.irods.jargon.core.connection.JargonProperties#isForcePamFlush()
+	 */
+	@Override
+	public synchronized boolean isForcePamFlush() {
+		return forcePamFlush;
+	}
+	
+	public synchronized void setForcePamFlush(final boolean forcePamFlush) {
+		this.forcePamFlush = forcePamFlush;
 	}
 
 }
