@@ -1,5 +1,5 @@
 package org.irods.jargon.core.utils;
 public final class JargonVersion {
  public static String VERSION="3.3.2-SNAPSHOT";
- public static String BUILD_TIME="20131009-1655";
+ public static String BUILD_TIME="20131011-1059";
 }
