@@ -97,3 +97,7 @@ use.specific.query.for.collection.listings=true
 # check the user access rights for a user who has access via a group.  This is so methods like <code>IRODSFile.canRead()</code> will work
 #  even though a user does not have explicit permissions, and is a member of a group that has access instead.
 use.specquery.for.dataobj.permissions.for.user.in.group=true
+
+# force flushes when doing PAM auth.  This is to allow PAM to work with versions prior to iRODS 3.3, where the additional flushes
+# were required.  These additional flushes cause performance issues and should not be used with iRODS 3.3
+force.pam.flush=true
