@@ -1,7 +1,7 @@
 test.confirm=true
 									test.data.directory=/Users/mikeconway/temp/irodsscratch/
 									test.irods.admin=rods
-									test.irods.admin.password=test
+									test.irods.admin.password=rods
 									test.irods.user=test1
 									test.irods.password=test
 									test.irods.resource=test1-resc
@@ -11,9 +11,9 @@ test.confirm=true
 									test3.irods.user=test3
 									test3.irods.password=test
 									test3.irods.resource=test1-resc2
-									test.irods.host=localhost
+									test.irods.host=152.54.8.147
 									test.irods.port=1247
-									test.irods.zone=test1
+									test.irods.zone=tempZone
 									test.resource.group=testResourceGroup
 									test.irods.userDN=test1DN
 									test.irods.scratch.subdir=jargon-scratch
